base/services/ms-supplier/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-supplier
  labels:
    app: ms-supplier
    app.kubernetes.io/name: ms-supplier
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
      name: http
  selector:
    app: ms-supplier
